refactor: rename agreementTemplate -> template
